fix scrollbars

--- a/src/components/App/app.scss
+++ b/src/components/App/app.scss
@@ -1,4 +1,5 @@
 .app {
+  overflow: hidden;
   
   &__header {
     position: relative;
